Initial Login Changes

--- a/Login.html
+++ b/Login.html
@@ -71,7 +71,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Login</h2>
-							<p>Please login with the username and password you used when registering to the site.</p>
+							<p>Use any of the following methods to Login. If you have not created an account before, one will be created for you.</p>
 						</header>
 						<div class="row 150%">
 							<div class="4u 12u$(medium)">
@@ -132,8 +132,6 @@
 										  		  window.location.replace("UpdateProfile.html");
 										  	   }
 										    </script>
-										    
-										    <h2><u>Returning User?</u></h2>
 										    
 										    <div id="firebaseui-auth-container"></div>
 
