--- a/companies.html
+++ b/companies.html
@@ -136,9 +136,12 @@
 				var auth = app.auth();
 
       			initApp = function() {
+      				console.log("in initApp");
         			auth.onAuthStateChanged(function(user) {
+        			  console.log("in onAuthStateChanged");
 			          if (user) {
 			            // User is signed in.
+			            console.log("User is signed in");
 			            var displayName = user.displayName;
 			            var email = user.email;
 			            var emailVerified = user.emailVerified;
@@ -146,6 +149,7 @@
 			            var uid = user.uid;
 			            var providerData = user.providerData;
 			            user.getToken().then(function(accessToken) {
+			            	console.log("in gettoken");
 			              	document.getElementById("signupProfileBtn").href="UpdateProfile.html";
 							document.getElementById("signupProfileBtn").innerHTML="My Profile";
 							document.getElementById("loginLogoutBtn").href="#";
@@ -154,6 +158,7 @@
 					    	console.log("User " + displayName + " is logged in with " + providerData);
 			            });
 			          } else {
+			          	console.log("User is logged out.");
 			            document.getElementById("signupProfileBtn").href="Login.html";
 						document.getElementById("signupProfileBtn").innerHTML="Sign Up";
 						document.getElementById("loginLogoutBtn").href="Login.html";
