--- a/ResetPassword.html
+++ b/ResetPassword.html
@@ -10,7 +10,7 @@
 		<title>VirtuSchools</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
 		<script src="assets/js/jquery.js" type="text/javascript"></script>
 		<script src="assets/js/jquery.ui.draggable.js" type="text/javascript"></script>
 
