--- a/UpdateProfile.html
+++ b/UpdateProfile.html
@@ -139,7 +139,7 @@
 										    </script>
 										    
 										    <h2>Current Information</h2>
-										    <span class="image"><img id="image" src="https://pixabay.com/static/uploads/photo/2014/04/03/10/10/man-310013_960_720.png" alt="Photo" height="290" width="290" /></span>
+										    <span class="image"><img id="image" src="https://pixabay.com/static/uploads/photo/2014/04/03/10/10/man-310013_960_720.png" alt="Photo" height="150" width="150" /></span><br>
 										    <strong>First Name:</strong> <span id="currentfname"></span><br>
 										    <strong>Last Name:</strong> <span id="currentlname"></span><br>
 										    <strong>User Type:</strong> <span id="currenttype"></span><br>
