--- a/UpdateProfile.html
+++ b/UpdateProfile.html
@@ -208,7 +208,7 @@
 													  		email : enteredEmail
 														}).then(function() {
 														  // Update successful.
-														  location.reload(); 
+														  //location.reload(); 
 														}, function(error) {
 														  // An error happened.
 														  console.log(error);
