--- a/UpdateProfile.html
+++ b/UpdateProfile.html
@@ -141,12 +141,7 @@
 														document.getElementById("loginLogoutBtn").innerHTML="Log Out";
 													    console.log("User " + authData.uid + " is logged in with " + authData.provider);
 													} else {
-														document.getElementById("signupProfileBtn").href="Login.html";
-														document.getElementById("signupProfileBtn").innerHTML="Sign Up";
-														document.getElementById("loginLogoutBtn").href="Login.html";
-														document.getElementById("loginLogoutBtn").onclick=function(){ window.location="Login.html"};
-														document.getElementById("loginLogoutBtn").innerHTML="Login";
-													    console.log("User is logged out");
+														window.location.replace("Login.html");
 												    }
 												});
 												
