--- a/UpdateProfile.html
+++ b/UpdateProfile.html
@@ -141,6 +141,7 @@
 														document.getElementById("loginLogoutBtn").innerHTML="Log Out";
 													    console.log("User " + authData.uid + " is logged in with " + authData.provider);
 													} else {
+														console.log("Logged out.");
 														window.location.replace("Login.html");
 												    }
 												});
