--- a/UpdateProfile.html
+++ b/UpdateProfile.html
@@ -120,7 +120,13 @@
 														  {
 															  firebase.database().ref('users/' + userId).set({
 															    email: email
-															  });
+															  }).then(function(){
+														  		// Update successful.
+														  		console.log("Changed user email to"+email); 
+															  }, function(error) {
+														  		// An error happened.
+														  		console.log(error);
+															  });;
 														  }
 														  document.getElementById("currenttype").innerHTML=snapshot.val().userType;
 														  document.getElementById("currentcourse").innerHTML=snapshot.val().course;
