type2 to gender

--- a/UpdateProfile.html
+++ b/UpdateProfile.html
@@ -326,7 +326,7 @@
 										    <select id="course">
 										      <option value="Algebra">Algebra (High School/College)</option>
 										    </select><br><br>
-										    <select id="type2">
+										    <select id="gender">
 										      <option value="Male">I want my avatar to be a boy.</option>
 										      <option value="Female">I want my avatar to be a girl.</option>
 										    </select><br><br>
